DevOps/k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-api
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: fitness-tracker-dev-auth-service
                port:
                  number: 8001
          - path: /api/v1/workouts
            pathType: Prefix
            backend:
              service:
                name: fitness-tracker-dev-workouts-service
                port:
                  number: 8002
          - path: /api/v1/analytics
            pathType: Prefix
            backend:
              service:
                name: fitness-tracker-dev-analytics-service
                port:
                  number: 8003
